correzioni varie